# hgai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  freakshow-alpha.hg.export.yaml  hg-alpha.20260322.hgai.export.yaml  hgai-alpha.sh  hgai-bravo.sh  hgai.sh  hgsh  hgsh.sh  new-o-output-results-file.yaml  pyproject.toml  requirements.txt
docs/: api-reference.md  concepts.md  hello-world.md  investor-pitch-deck.md  module-development.md
docs/architecture/: hypergraph_ai_design_notes.md
docs/design/: ai-knowledge-store.md  prompt-gen-plan-orgs.md  prompt-sparql-esque-query-lang.md
docs/dev_notes/: fix-gnome-ring-hijacking-rsa.md  hgai-improvements-20260328.md  skhg-inferencing-notes.md
hgai/: __init__.py  config.py  main.py
hgai/api/: __init__.py  deps.py
hgai/core/: __init__.py  auth.py  cache.py  engine.py  inference.py  space_engine.py
hgai/db/: __init__.py  mongodb.py  storage.py
hgai/mcp/: __init__.py  (+1 more)
hgai_module_hql/: __init__.py  api_router.py  engine.py  module.py
hgai_module_mcp/: __init__.py  module.py  server.py
hgai_module_mesh/: __init__.py  api_router.py  engine.py  models.py  module.py  scheduler.py
hgai_module_shql/: __init__.py  api_router.py  engine.py  module.py  parser.py
hgai_module_storage/: __init__.py  backend.py  exceptions.py  filters.py  registry.py
hgai_module_storage_mongodb/: __init__.py  backend.py  connection.py  indexes.py
scripts/: mongo-init.js  seed_data.py
shell/: __init__.py  hgai_shell.py
tests/: __init__.py  test_engine.py  test_mesh.py  test_query.py
ui/: index.html
(+30 files in other folders)
