[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hgai"
version = "0.1.0"
description = "HypergraphAI - Semantic Hypergraph Knowledge Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["hypergraph", "knowledge-graph", "semantic", "ai", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.9.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
hgai = "hgai.main:cli_main"
hgai-shell = "shell.hgai_shell:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hgai*", "hgai_module_hql*", "hgai_module_mcp*", "hgai_module_mesh*", "shell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
